force-app/main/default/objects/Masking__c/Masking__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>マスキング</label>
</CustomObject>