force-app/main/default/objects/Masking__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>ユーザマスキング値_別名</label>
    <length>8</length>
    <type>Text</type>
</CustomField>