force-app/main/default/objects/Masking__c/fields/BatchCompletedMessage__c.field-meta.xml
<CustomField>
    <fullName>BatchCompletedMessage__c</fullName>
    <label>バッチ処理完了メッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>