force-app/main/default/objects/Masking__c/fields/BatchFailedMessage__c.field-meta.xml
<CustomField>
    <fullName>BatchFailedMessage__c</fullName>
    <label>バッチ処理エラーメッセージ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>