force-app/main/default/objects/Masking__c/fields/CommunityNickname__c.field-meta.xml
<CustomField>
    <fullName>CommunityNickname__c</fullName>
    <label>ユーザマスキング値_ニックネーム</label>
    <length>40</length>
    <type>Text</type>
</CustomField>