force-app/main/default/objects/Masking__c/fields/CompleteMessage__c.field-meta.xml
<CustomField>
    <fullName>CompleteMessage__c</fullName>
    <label>完了メッセージ</label>
    <type>TextArea</type>
</CustomField>