force-app/main/default/objects/Masking__c/fields/ConfirmMessage__c.field-meta.xml
<CustomField>
    <fullName>ConfirmMessage__c</fullName>
    <label>確認メッセージ</label>
    <type>TextArea</type>
</CustomField>