force-app/main/default/objects/Masking__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>ユーザマスキング値_メール</label>
    <type>Email</type>
</CustomField>