force-app/main/default/objects/Masking__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>ユーザマスキング値_名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>