force-app/main/default/objects/Masking__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>ユーザマスキング値_姓</label>
    <length>80</length>
    <type>Text</type>
</CustomField>