force-app/main/default/objects/Masking__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>ユーザマスキング値_ユーザ名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>